[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "minimal-key"
author = "Oliver Steele"
author-email = "steele@osteele.com"
description-file = "./README.rst"
home-page = "https://github.com/osteele/minimal-key"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
]
dev-requires = ["pytest (~=3.2.2)"]
requires-python = ">=3.5"
