[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "minimalkeys"
author = "Oliver Steele"
author-email = "steele@osteele.com"
description-file = "./README.rst"
home-page = "https://github.com/osteele/minimal-keys"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
]
dev-requires = [
    "bumpversion",
    "keyring",
    "pytest (~=3.2.2)",
    "Sphinx",
    "sphinx_rtd_theme",
]
requires-python = ">=3.5"
